# toolbox

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
docs/: GUIDE.md
src/: activate.rs  activation_vars.rs  cli.rs  commands.rs  dockercfg.rs  env.rs  installed.rs  main.rs  manifest.rs  oci.rs  paths.rs  registry.rs  relocate.rs  service.rs  tomlp.rs
tests/: config_cli.rs  env_lifecycle.rs  package_activation.rs  relocation_e2e.rs  repull.rs  revert_on_remove.rs  run_tool.rs  services.rs  which.rs
