[package]
name = "toolbox"
version = "0.1.0"
edition = "2021"
description = "Portable environment manager with relocatable envs distributed as OCI artifacts."
license = "Apache-2.0"
repository = "https://github.com/CarsonKopec/toolbox"
readme = "README.md"
keywords = ["environment", "oci", "relocatable", "cli", "toolbelt"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "toolbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tomlplus-syntax = "2.0.0-rc.2"
anyhow = "1"
thiserror = "2"
dirs = "5"
walkdir = "2"
dunce = "1"
tokio = { version = "1", features = ["rt", "macros"] }
oci-client = "0.14"
tar = "0.4"
zstd = "0.13"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
